--- a/src/employee/management/CheckProject.form
+++ b/src/employee/management/CheckProject.form
@@ -546,9 +546,11 @@
               <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
-                <StringItem index="0" value="Approved"/>
-                <StringItem index="1" value="Rejected"/>
+              <StringArray count="4">
+                <StringItem index="0" value="Pending"/>
+                <StringItem index="1" value="Working"/>
+                <StringItem index="2" value="Approved"/>
+                <StringItem index="3" value="Rejected"/>
               </StringArray>
             </Property>
           </Properties>
